--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="content-projects">
                 <div class="card-projects">
                     <div class="icon-projects">
-                        <img src="Screenshots/Portfolio 1.PNG" width="240px" height="140px" alt="">
+                        <img src="Portfolio 1.PNG" width="240px" height="140px" alt="">
                     </div>
                     <div class="info-projects">
                         <h3>Personal Portfolio</h3>
@@ -74,7 +74,7 @@
              </div>  <!--ADDITIONAL PART -->
                <a href="https://itssanas.github.io/portfolio/" target="_blank"> <div class="card-projects">
                     <div class="icon-projects">
-                        <img src="Screenshots/Main - Shopping Portfolio.PNG" width="240px" height="140px" alt="">         
+                        <img src="Main - Shopping Portfolio.PNG" width="240px" height="140px" alt="">         
                     </div>
                     <div class="info-projects">
                         <h3>Online Shop Design</h3>
@@ -83,7 +83,7 @@
                 </div></a>
                 <div class="card-projects">
                     <div class="icon-projects">
-                        <img src="Screenshots/Advanced Portfolio Main Release - 1.png" width="240px" height="140px" alt="">
+                        <img src="Advanced Portfolio Main Release - 1.png" width="240px" height="140px" alt="">
                     </div>
                     <div class="info-projects">
                         <h3>Advanced Portfolio</h3>
